src/objects/ProductGroup__c.object
<CustomObject>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <type>Date</type>
    </fields>

    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>25</length>
        <type>Text</type>
    </fields>
 <fields>
        <fullName>AttachmentId__c</fullName>
        <label>AttachmentId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ParentGroup</label>
        <referenceTo>ProductGroup__c</referenceTo>
        <relationshipLabel>ProductGroups</relationshipLabel>
        <relationshipName>ProductGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Piece__c</fullName>
        <label>Piece</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <label>ProductGroup</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ProductGroup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProductGroups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>